added animator and tests

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <script type="text/javascript" src="jasmine-1.1.0/jasmine.js"></script>
 <script type="text/javascript" src="jasmine-1.1.0/jasmine-html.js"></script>
 
-<script type="text/javascript" src="jasmine-1.1.0/powerslide.js"></script>
-<script type="text/javascript" src="jasmine-1.1.0/powerslide_spec.js"></script>
+
+<script type="text/javascript" src="animator_spec.js"></script>
+<script type="text/javascript" src="powerslide_spec.js"></script>
+<script type="text/javascript" src="animator.js"></script>
+<script type="text/javascript" src="powerslide.js"></script>
 
 
 <html><body>
